--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -19,7 +19,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html[theme-mode='dark'] body {
+  background: #0f1114;
+  color: #f2f3f5;
+}
+
 #app {
   width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
